# groceries

./: CMakeLists.txt  package.xml  setup.py  tags
scripts/: storing_groceries_2019
src/groceries/: __init__.py
src/groceries/common/: manipulation.py
src/groceries/groceries/: states.py
